[project]
name = "jawiki"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "hppRC", email = "hpp.ricecake@gmail.com" }
]
dependencies = [
    "datasets>=2.16.1",
    "beautifulsoup4>=4.12.3",
    "elasticsearch>=8.12.0",
    "fugashi>=1.3.0",
    "grequests>=0.7.0",
    "logzero>=1.7.0",
    "lxml>=5.1.0",
    "requests>=2.31.0",
    "tqdm>=4.66.1",
    "unidic_lite>=1.0.8",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]


[tool.ruff]
exclude = [".git", ".mypy_cache", ".ruff_cache", ".venv", "outputs", "prev"]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
fixable = ["ALL"]
unfixable = []
# https://qiita.com/yuji38kwmt/items/63e82126076204923520
select = ["F", "E", "W", "I", "B", "PL", "UP", "N"]
ignore = [
    "PLR0913", # Too many arguments in function definition
    "PLR2004", # Magic value used in comparison
    "N812", # Lowercase imported as non-lowercase
    "N802", # Function name should be lowercase
    "N803", # Argument name should be lowercase
    "N806", # Variable in function should be lowercase
    "N815", # Variable in class scope should not be mixedCase
    "PLW2901",
    "PLR0912",
    "PLR0911",
]

[tool.ruff.format]
quote-style = "double"
line-ending = "auto"
